<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoLayout"
    android:gravity="center_horizontal">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ip"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textViewEnderecoAtual" />
                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewRedeActivityMain"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_porta"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textViewPortaAtual" />
                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewPortaActivityMain"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_palavra"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textViewPalavraAtual" />
                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewPalavraActivityMain"
                        android:enabled="false"
                        android:inputType="textPassword"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>
</LinearLayout>