<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoLayout"
    android:gravity="center_horizontal">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView3" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/progressBar" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_tempcelsius"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:text="-"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="50dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewCelsius"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_tempkelvin"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textView2" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:text="-"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="50dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewKelvin"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_tempfarenheit"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorTextoTextView"
                        android:id="@+id/textView3" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="80dp"
                        android:text="-"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="50dp"
                        android:background="@drawable/campo"
                        android:textColor="@color/colorFundoTextView"
                        android:id="@+id/textViewFarenheit"
                        android:enabled="false" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>

</LinearLayout>